--- a/ui/css/main.scss
+++ b/ui/css/main.scss
@@ -356,6 +356,23 @@ text-align:center;}
 		color:$black;
 	}
 }
+
+.social{
+	background:transparent;
+	display:inline-block;
+	text-align: center;
+	border-radius:3px;
+	padding:0px 3px;
+	width:20px;
+	img{
+		vertical-align: middle;
+	}
+	&:hover{
+		background:white;
+	}
+}
+
+
 /* RESPONSIVE MENU */
 /*
 .custom-wrapper.open {
