--- a/ui/css/main.scss
+++ b/ui/css/main.scss
@@ -268,6 +268,8 @@ body{
 	padding:0;
 	text-decoration: none;
 	text-transform: none;
+	font-family: "jaf-bernino-sans",sans-serif;
+
 }
 
 .ui-title{
