--- a/ui/css/main.scss
+++ b/ui/css/main.scss
@@ -3,6 +3,33 @@
 $light-grey: #979797;
 $black: #4A4A4A;
 
+/*****************************************************
+	 HOVER.CSS 
+	https://github.com/IanLunn/Hover
+*/
+/* SHADOW/GLOW TRANSITIONS */
+/* Glow */
+.glow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow;
+  transition-property: box-shadow;
+}
+.glow:hover, .glow:focus, .glow:active {
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+}
+
+/******** End hover.css **/
+
+
 @import 'purecss.0.6.0';
 /* Adriane Lux Regular Font*/
 @font-face {
@@ -34,7 +61,9 @@ $black: #4A4A4A;
     50%{background-position:97% 100%}
     100%{background-position:4% 0%}
 }
-
+html{
+	font-family: "jaf-bernino-sans",sans-serif;
+}
 body{
 	background:white;
 	font-family: "jaf-bernino-sans",sans-serif;
@@ -84,60 +113,44 @@ body{
 	}
 }
 
-
-
-
 /* UI DETAILS */
 .hand{display:inline-block;margin:2em;}
 #global-menu li{
 	text-transform: lowercase;
 	font-size:80%;
 }
+
+#another-quote-button,
 #suggest-quote{
-	width:200px;
-	a{
-		position:relative;
-		padding-right:2.5em;
-		background-size: contain;
-		height:20px;
-		width: 20px;
-		display: inline-block;
-		background: transparent;
-		-webkit-transition: all .6s ease;
-		transition: all 0.6s ease;
-		text-align: right;
-		img{
-			border-radius:25px;
-			overflow:hidden;
-			-webkit-transition: all .6s ease;
-			transition: all 0.6s ease;
-		}
-
-		b{
-			position:absolute;
-			right:3em;
-			top:50%;
-			padding:5px 10px;
-			color: $black;
-			font-weight: normal;
-			-webkit-transition: all .6s ease;
-			transition: all 0.6s ease;
-			opacity:0;
-		}
-		&:hover{
-			img{
-				box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-				-webkit-transition: all .6s ease;
-				transition: all 0.6s ease;
-			}
-			b{
-				opacity:1;
-				right:5em;
-				-webkit-transition: all .6s ease;
-				transition: all 0.6s ease;
-			}
-		}
-
+	
+	display:inline-block;
+	margin:1em auto 2em;
+	background: white;
+// 	background: linear-gradient(317deg, #dffaff, #f5ffe1, #fee3e3, #cdecc4);
+	color:$black;
+	border-radius:10px;
+	padding:1em 2em;
+	border: 1px solid $black;
+	text-decoration: none;
+	transition: all 0.6s ease;
+	font-family: "jaf-bernino-sans",sans-serif;
+	
+	&:hover, &:focus, &:active{
+	-webkit-transform: translate3d(0,0,0);
+	-moz-transform: translate3d(0,0,0);
+	-ms-transform: translate3d(0,0,0);
+	-o-transform: translate3d(0,0,0);
+	transform: translate3d(0,0,0);
+	background: linear-gradient(317deg, #dffaff, #f5ffe1, #fee3e3, #cdecc4);
+	background-size: 800% 800%;
+	-webkit-animation: backgroundgradientfade 2s ease infinite;
+	-moz-animation: backgroundgradientfade 2s ease infinite;
+	-o-animation: backgroundgradientfade 2s ease infinite;
+	animation: backgroundgradientfade 2s ease infinite;
+	color:$black;
+	}
+	&:active{
+		@extend .glow;
 	}
 }
 
@@ -295,22 +308,6 @@ body{
 	margin-bottom: 5px;
 }
 
-#another-quote-button{
-	display:inline-block;
-	margin:1em auto 2em;
-	background:$black;
-	color:white;
-	border-radius:10px;
-	padding:1em 2em;
-	border: 0px solid $black;
-	-webkit-transition: all .6s ease;
-	transition: all 0.6s ease;
-	text-decoration: none;
-	&:hover{
-		background:white;
-		color:$black;
-	}
-}
 
 /* ---  A QUOTE CARD --- */
 .quote{padding:2em 0;margin:1em 0;}
