--- a/ui/css/main.scss
+++ b/ui/css/main.scss
@@ -90,6 +90,7 @@ body{
 	-o-animation: backgroundgradientfade 24s ease infinite;
 	animation: backgroundgradientfade 24s ease infinite;
 	min-height: 70vh;
+	
 }
 
 .content{
@@ -122,7 +123,7 @@ body{
 
 #another-quote-button,
 #suggest-quote{
-	
+	text-transform: none;
 	display:inline-block;
 	margin:1em auto 2em;
 	background: white;
@@ -132,7 +133,6 @@ body{
 	padding:1em 2em;
 	border: 1px solid $black;
 	text-decoration: none;
-	transition: all 0.6s ease;
 	font-family: "jaf-bernino-sans",sans-serif;
 	
 	&:hover, &:focus, &:active{
@@ -143,10 +143,10 @@ body{
 	transform: translate3d(0,0,0);
 	background: linear-gradient(317deg, #dffaff, #f5ffe1, #fee3e3, #cdecc4);
 	background-size: 800% 800%;
-	-webkit-animation: backgroundgradientfade 2s ease infinite;
-	-moz-animation: backgroundgradientfade 2s ease infinite;
-	-o-animation: backgroundgradientfade 2s ease infinite;
-	animation: backgroundgradientfade 2s ease infinite;
+	-webkit-animation: backgroundgradientfade 8s ease infinite;
+	-moz-animation: backgroundgradientfade 8s ease infinite;
+	-o-animation: backgroundgradientfade 8s ease infinite;
+	animation: backgroundgradientfade 8s ease infinite;
 	color:$black;
 	}
 	&:active{
