--- a/ui/css/main.scss
+++ b/ui/css/main.scss
@@ -274,6 +274,7 @@ body{
 			display:block;
 			height:25px;
 			background:$light-grey;
+			background:white;
 			color:$light-grey;
 			-webkit-transform: rotateX(-90deg);
 	        -webkit-transform-origin: 50% 0;
@@ -290,6 +291,7 @@ body{
 			.author-total{
 				background:white;
 				color:$light-grey;
+				color:black;
 				-webkit-transform: rotateX(0deg);
 				-webkit-transition: all 600ms cubic-bezier(.3, .7, .1, 1);
 				transform: rotateX(0deg);
@@ -337,7 +339,7 @@ body{
 	margin-bottom: 5px;
 }
 h2.topic-title{
-	font-size:18px;
+	font-size:14px;
 	color: $black;
 	color: white;
 	padding-left:2em;
