--- a/ui/css/main.scss
+++ b/ui/css/main.scss
@@ -1,9 +1,20 @@
 /* VARIABLES */
-
+$lighter-grey: #EFEFEF;
 $light-grey: #979797;
 $black: #4A4A4A;
-
+$sans-serif: "jaf-bernino-sans",sans-serif;
+$serif: 'Adriane Lux', serif;
 /*****************************************************
+
+
+/* MAILCHIMP SIGNUP FORM CSS
+*/
+
+@import 'mailchimp-form';
+
+
+
+/*
 	 HOVER.CSS 
 	https://github.com/IanLunn/Hover
 */
@@ -27,16 +38,71 @@ $black: #4A4A4A;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
 }
 
+/* BLINK EFFECT (Cursor)*/
+@keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color:$lighter-grey;
+  }
+}
+
+@-moz-keyframes blink {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color:$lighter-grey;
+  }
+}
+
+@-webkit-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color:$lighter-grey;
+  }
+}
+
+@-o-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color:$lighter-grey;
+  }
+}
+
+
+/* fadein */
+@keyframes "fadein" {
+	0%   { opacity: 0; }
+	100% { opacity: 1; }
+}
+@-webkit-keyframes fadein {
+	0%   { opacity: 0; }
+	100% { opacity: 1; }
+}
+.fadein {
+ animation-name: fade-in;
+ animation-duration: 2s;
+ animation-iteration-count: 1;
+ animation-timing-function: linear;
+ -webkit-animation-name: fade-in;
+ -webkit-animation-duration: 1s;
+ -webkit-animation-iteration-count: 1;
+ -webkit-animation-timing-function: linear;
+}
 /******** End hover.css **/
-
-
 @import 'purecss.0.6.0';
 
 /* fixes to purecss */
 address{font-style: normal;}
 
 .pure-menu-link{
-	font-family: "jaf-bernino-sans",sans-serif;
+	font-family: $sans-serif;
 	padding:1em;
 	margin:1em 0 2em;
 	text-transform: none;
@@ -83,12 +149,15 @@ address{font-style: normal;}
     50%{background-position:97% 100%}
     100%{background-position:4% 0%}
 }
-html{
-	font-family: "jaf-bernino-sans",sans-serif;
-}
-body{
+
+
+html,body{
 	background:white;
-	font-family: "jaf-bernino-sans",sans-serif;
+// 	-webkit-font-smoothing:subpixel-antialiased;
+}
+html, button, input, select, textarea,
+.pure-g [class *= "pure-u"] {
+	font-family: $sans-serif;
 	font-size:16px;
 }
 
@@ -100,6 +169,7 @@ body{
 }
 .content-wrapper {
 	/* triggers hardware acceleration */
+/*
 	-webkit-transform: translate3d(0,0,0);
 	-moz-transform: translate3d(0,0,0);
 	-ms-transform: translate3d(0,0,0);
@@ -114,6 +184,7 @@ body{
 	min-height: 400px;
 	min-height: 70%;
 	min-height: 70vh;
+*/
 	
 }
 
@@ -128,7 +199,10 @@ body{
 	padding-right: 1em;
 	max-width: 768px;
 }
-
+.error-404 .content{
+	font-family:$serif;
+	font-size:300%
+}
 .header{
 	background:white;
 	padding:1em;
@@ -137,8 +211,9 @@ body{
 .footer{
 	text-align:center;
 	padding:2em;
-	line-height: 2;
+	line-height: 1.4;
 	font-size:80%;
+
 	color: $light-grey;
 	a{
 		color: $light-grey;
@@ -146,6 +221,41 @@ body{
 }
 
 /* UI DETAILS */
+.sep{
+	display:block;
+	text-align: center;
+	letter-spacing: 2em;
+	font-family: $serif;
+	font-weight: 100;
+	color:$light-grey;
+	opacity: 0.3;
+	margin:6em auto 9em;
+}
+.pilcrow,
+.guillemets{
+	color: #B4D8E7;
+	color: $lighter-grey;
+	font-weight: 100;
+	margin-left:.002em;
+	display:inline-block;
+}
+.pilcrow{
+ -webkit-animation: 1s blink step-end infinite;
+  -moz-animation: 1s blink step-end infinite;
+  -ms-animation: 1s blink step-end infinite;
+  -o-animation: 1s blink step-end infinite;
+  animation: 1s blink step-end infinite;
+}
+.guillemets{
+	font-size:250%;
+	line-height: 0;
+	vertical-align: text-bottom;
+	margin-right:1rem;
+	&:before{
+		content: "❝";
+		content: "“";
+	}
+}
 .hand{display:inline-block;margin:2em;}
 #global-menu li{
 	font-size:80%;
@@ -163,7 +273,7 @@ body{
 	padding:1em 2em;
 	border: 1px solid $black;
 	text-decoration: none;
-	font-family: "jaf-bernino-sans",sans-serif;
+	font-family: $sans-serif;
 	
 	&:hover, &:focus, &:active{
 	-webkit-transform: translate3d(0,0,0);
@@ -313,7 +423,7 @@ body{
 	padding:0;
 	text-decoration: none;
 	text-transform: none;
-	font-family: "jaf-bernino-sans",sans-serif;
+	font-family: $sans-serif;
 
 }
 
@@ -343,7 +453,6 @@ h2.topic-title{
 	color: $black;
 	color: white;
 	padding-left:2em;
-// 	font-family: 'Adriane Lux';
 	display:inline-block;
 	text-transform: uppercase;
 	&:before{
@@ -353,13 +462,17 @@ h2.topic-title{
 }
 
 /* ---  A QUOTE CARD --- */
-.quote{padding:2em 0;margin:1em 0;}
-#photo{
+.quote{
+	padding:2em 0;
+	margin:1em auto;
+	max-width:1200px;
+}
+.photo{
 	margin:auto;
 	border-radius:50%;
 	width:200px;
 	height:200px;
-	background-color:white;
+	background-color: transparent;
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size:cover;
@@ -367,20 +480,24 @@ h2.topic-title{
 	-webkit-box-shadow: inset 0px 0px 45px 5px rgba(18,18,18,0.19);
 	-moz-box-shadow: inset 0px 0px 45px 5px rgba(18,18,18,0.19);
 	box-shadow: inset 0px 0px 45px 5px rgba(18,18,18,0.19);
+// 	transition: all 1000ms cubic-bezier(.7, .5, .3, 1);
 }
 #photo.woman{
 	background-image: url('../img/woman.svg');
 }
 blockquote{
-	font-family: 'Adriane Lux', serif;
-	line-height: 1.3;
-}
-blockquote.large{
-	padding:0;
-	font-family: 'Adriane Lux', serif;
-	font-size:32px;
+	
+	font-family: $serif;
 	line-height: 1.4;
+	text-align: center;
+	font-size:24px;
 }
+
+span.randomchar{
+	@extend .fadein;
+	color:$lighter-grey;
+}
+
 figcaption{
 	padding-top:1em;
 	text-align: center;
@@ -389,11 +506,17 @@ figcaption{
 	}
 
 	.author{
+		margin-top:.7em;
 		font-size:120%;
 		a{
 			text-decoration:none;
 		}
 	}
+}
+.image-drop-shadow{
+	-webkit-box-shadow: 0px 2px 23px -2px rgba(33,30,33,0.56);
+	-moz-box-shadow: 0px 2px 23px -2px rgba(33,30,33,0.56);
+	box-shadow: 0px 2px 23px -2px rgba(33,30,33,0.56);
 }
 .center{
 text-align:center;}
@@ -401,6 +524,10 @@ text-align:center;}
 	padding:10px 0;
 	padding-top:0px;
 	font-size:80%;
+	color: lighten($light-grey,20%);
+	a{
+		color:lighten($light-grey,20%);
+	}
 }
 .meta{
 	color:$light-grey;
@@ -433,25 +560,42 @@ text-align:center;}
 	&:hover{
 		background:white;
 	}
+	&:active{
+		@extend .glow;
+	}
 }
 
 /* SEARCH FORM */
-.autocomplete-suggestions { border: 1px solid #999; background: #FFF; overflow: auto; }
+.autocomplete-suggestions { border: 1px solid $light-grey; background: #FFF; overflow: auto; }
 .autocomplete-suggestion { padding: 2px 5px; white-space: nowrap; overflow: hidden; }
 .autocomplete-selected { background: #F0F0F0; }
-.autocomplete-suggestions strong { font-weight: normal; color: #3399FF; }
+.autocomplete-suggestions strong { font-weight: normal; color: #3399FF; color:red; }
 .autocomplete-group { padding: 2px 5px; }
-.autocomplete-group strong { display: block; border-bottom: 1px solid #000; }
+.autocomplete-group strong { display: block; border-bottom: 1px solid $black; }
 
-.autocomplete-suggestions { border: 1px solid #999; background: #FFF; cursor: default; overflow: auto; -webkit-box-shadow: 1px 4px 3px rgba(50, 50, 50, 0.64); -moz-box-shadow: 1px 4px 3px rgba(50, 50, 50, 0.64); box-shadow: 1px 4px 3px rgba(50, 50, 50, 0.64); }
+.autocomplete-suggestions { border: 1px solid $light-grey; background: #FFF; cursor: default; overflow: auto; -webkit-box-shadow: 1px 4px 3px rgba(50, 50, 50, 0.64); -moz-box-shadow: 1px 4px 3px rgba(50, 50, 50, 0.64); box-shadow: 1px 4px 3px rgba(50, 50, 50, 0.64); }
 .autocomplete-suggestion { padding: 2px 5px; white-space: nowrap; overflow: hidden; }
 .autocomplete-no-suggestion { padding: 2px 5px;}
 .autocomplete-selected { background: #F0F0F0; }
-.autocomplete-suggestions strong { font-weight: bold; color: #000; }
+.autocomplete-suggestions strong { font-weight: bold; color: $black; }
 .autocomplete-group { padding: 2px 5px; }
-.autocomplete-group strong { font-weight: bold; font-size: 16px; color: #000; display: block; border-bottom: 1px solid #000; }
+.autocomplete-group strong { font-weight: bold; font-size: 16px; color: $black; display: block; border-bottom: 1px solid $black; }
 
-.search input { font-size: 28px; padding: 10px; border: 1px solid #CCC; display: block; margin: 20px 0; }
+.search input {
+	padding: 10px;
+	border:none; 
+	border-bottom: 1px solid $lighter-grey; 
+	color:$lighter-grey;
+	display: block; 
+	margin: 20px 0;
+	transition: all 350ms cubic-bezier(.7, .5, .3, 1);
+	&:focus{
+		outline: dotted;
+		outline: 1px solid $light-grey; 
+		border-bottom-color: $light-grey;
+		color:$light-grey;
+	}
+}
 .search{
 margin-bottom:2em;
 }
@@ -474,14 +618,16 @@ margin-bottom:2em;
 	vertical-align: middle;
 	border:1px solid #DDD;
 }
-.quote-short{
-	margin-bottom: 10em;
+
+.latest .quote-short{
+	margin-bottom:10em;
 }
 .quote-short blockquote{
 	font-size:24px;
 	line-height: 1.4;
 	max-width: 33%;
-	margin:1em auto 0;
+	max-width: 768px;
+	margin:2em auto;
 }
 .quote-short strong{
 	font-weight: bolder;
@@ -502,87 +648,30 @@ form{padding:2em;}
 
 @media (min-width: 48em) {
 	blockquote.large{
-		font-size:64px;
+		font-size:32px;
 		line-height: 1.4;
 	}
 
 }
 
 
+body.of-author{
 
+	.quote {
+		transition: all 350ms cubic-bezier(.7, .5, .3, 1);
 
-/* Base */
+		figcaption{
+		opacity:0.1;
+		transition: all 350ms cubic-bezier(.7, .5, .3, 1);
 
-#awwwards{
-	position: fixed;
-	width: 126px;
-	height: 126px;
-	text-indent: -666em;
-	overflow: hidden;
-	z-index: 999;
-	-webkit-transition: all 1s ease;
-    transition: all 1s ease; 
-    opacity: 0.1;
-    transition: all 300ms ease-in;
-    &:hover{
-	    opacity:1;
-    }
-}
+		}
 
-#awwwards.top{
-	top: 0;
-}
-#awwwards.bottom{
-	bottom: 0;
-}
-#awwwards.left{
-	left: 0;
-}
-#awwwards.right{
-	right: 0;
-}
+		&:hover figcaption{
+			opacity:1;
+		}
+	}
 
-#awwwards a{
-	position: absolute;
-	top: 0;
-	left: 0;
-	display: block;
-	width: 126px;
-	height: 126px;
-	background-repeat: no-repeat;
-	background-position: 4px -23px;
-	background-size: 145px 145px;
 }
-
-#awwwards.top.left a{
-	-webkit-transform: rotate(-90deg);
-    transform: rotate(-90deg); 
-}
-#awwwards.bottom.left a{
-	background-position: -23px 4px;
-}
-#awwwards.bottom.right a{
-	background-position: -23px 4px;
-
-	-webkit-transform: rotate(-90deg);
-    transform: rotate(-90deg); 
-}
-
-/* NOMINEE */
-#awwwards.nominee.black a{
-	background-image: url(../img/ribbons/awwwards_nominee_black.png);
-}
-#awwwards.nominee.silver a{
-	background-image: url(../img/ribbons/awwwards_nominee_silver.png);
-}
-#awwwards.nominee.white a{
-	background-image: url(../img/ribbons/awwwards_nominee_white.png);
-}
-#awwwards.nominee.green a{
-	background-image: url(../img/ribbons/awwwards_nominee_green.png);
-}
-
-
 
 
 
@@ -621,11 +710,11 @@ form{padding:2em;}
 	h2.topic-title, #logo, address.author, .image-provided-by-google{
 		color:$light-grey;
 		font-weight: 100;
-		font-family: "jaf-bernino-sans",sans-serif;
+		font-family: $sans-serif;
 		*{
 			color:$light-grey !important;
 			font-weight: 100 !important;
-			font-family: "jaf-bernino-sans",sans-serif;
+			font-family: $sans-serif;
 		}
 	}
 }
