--- a/ui/css/main.scss
+++ b/ui/css/main.scss
@@ -185,9 +185,30 @@ html, button, input, select, textarea,
 	min-height: 70%;
 	min-height: 70vh;
 */
-	
 }
 
+#user-avatar{
+	text-align: center;
+	img{
+		border-radius:50%;
+		vertical-align: middle;
+		display:inline-block;
+		margin-right:1em;
+		width:50px;
+		height:auto;
+	}
+	.user-name{
+		display:inline-block;
+		width:75px;
+		text-align: center;
+		font-weight: bold;
+	}
+	.logout-link{
+		display: block;
+		font-weight: bolder;
+		margin-left:1em;
+	}
+}
 .content{
 		padding:0 0 .5em;
 }
@@ -197,6 +218,8 @@ html, button, input, select, textarea,
 	margin-right: auto;
 	padding-left: 1em;
 	padding-right: 1em;
+	padding-left: 0em;
+	padding-right: 0em;
 	max-width: 768px;
 }
 .error-404 .content{
@@ -443,22 +466,14 @@ html, button, input, select, textarea,
 	width: 50%;
 	max-width:30px;
 	margin-right: 50%;
-	border-top: 1px solid rgba(0,0,0,0.15);
+	border-top: 1px solid $light-grey;
 	display: block;
 	content: "";
 	margin-bottom: 5px;
 }
 h2.topic-title{
-	font-size:14px;
-	color: $black;
-	color: white;
-	padding-left:2em;
-	display:inline-block;
-	text-transform: uppercase;
-	&:before{
-		border-color: $black;
-		border-color: white;
-	}
+
+	text-align: left;
 }
 
 /* ---  A QUOTE CARD --- */
@@ -562,6 +577,34 @@ text-align:center;}
 	}
 	&:active{
 		@extend .glow;
+	}
+}
+
+.single-signon-providers{
+	list-style: none;
+
+	padding:0;
+	margin:0;
+	li{
+		display:inline-block;
+		text-align: center;
+		a{
+			border:1px solid $lighter-grey;
+			border-radius: 5px;
+			padding:1em;
+			display: block;
+			color:$light-grey;
+			text-decoration: none;
+			transition: all 300ms;
+			&:hover{
+				color: $black;
+				border-color: $black;
+			}
+		}
+	}
+	img{
+		height: 50px;
+		width: auto;
 	}
 }
 
