--- a/ui/css/main.scss
+++ b/ui/css/main.scss
@@ -710,7 +710,6 @@ form{padding:2em;}
 
 
 body.of-author{
-
 	.quote {
 		transition: all 350ms cubic-bezier(.7, .5, .3, 1);
 
@@ -724,9 +723,57 @@ body.of-author{
 			opacity:1;
 		}
 	}
-
 }
 
+.headhesive{
+
+
+  /* Required styles */
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width:100%;
+  display:block;
+  background: white;
+-webkit-box-shadow: 0px 1px 18px 0px rgba(92,92,92,0.3);
+-moz-box-shadow: 0px 1px 18px 0px rgba(92,92,92,0.3);
+box-shadow: 0px 1px 18px 0px rgba(92,92,92,0.3);
+
+  padding-left:2em;
+  padding-right:2em;
+  font-size:80%;
+  /* Translate -100% to move off screen */
+  -webkit-transform: translateY(-100%);
+      -ms-transform: translateY(-100%);
+          transform: translateY(-100%);
+
+  /* Animations */
+
+-webkit-transition: all 600ms cubic-bezier(0.230, 1.000, 0.320, 1.000); 
+   -moz-transition: all 600ms cubic-bezier(0.230, 1.000, 0.320, 1.000); 
+     -o-transition: all 600ms cubic-bezier(0.230, 1.000, 0.320, 1.000); 
+        transition: all 600ms cubic-bezier(0.230, 1.000, 0.320, 1.000); /* easeOutQuint */
+
+-webkit-transition-timing-function: cubic-bezier(0.230, 1.000, 0.320, 1.000); 
+   -moz-transition-timing-function: cubic-bezier(0.230, 1.000, 0.320, 1.000); 
+     -o-transition-timing-function: cubic-bezier(0.230, 1.000, 0.320, 1.000); 
+        transition-timing-function: cubic-bezier(0.230, 1.000, 0.320, 1.000); /* easeOutQuint */
+		h1{display:none;}
+		.photo {
+			width:100px;
+			height: 100px;
+		}
+
+    &.headhesive--stick{
+	/* Translate back to 0%; */
+		-webkit-transform: translateY(0%);
+		-ms-transform: translateY(0%);
+        transform: translateY(0%);
+	}
+	&.headhesive--unstick{}
+
+}
 
 
 @media only screen and (-Webkit-min-device-pixel-ratio: 1.5), only screen and (-moz-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3/2),	only screen and (min-device-pixel-ratio: 1.5) {
