remove newrelice clientside code

--- a/ui/css/main.scss
+++ b/ui/css/main.scss
@@ -58,7 +58,7 @@ $serif: "adriane", Georgia, serif;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
 }
 
-/* BLINK EFFECT (Cursor)*/
+/* BLINK EFFECT (caret / Cursor)*/
 @keyframes "blink" {
   from, to {
     color: transparent;
