--- a/ui/css/main.scss
+++ b/ui/css/main.scss
@@ -57,6 +57,20 @@ $serif: "adriane", Georgia, serif;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
 }
 
+@-webkit-keyframes pop-in {
+0% { opacity: 0; -webkit-transform: scale(0.5); }
+100% { opacity: 1; -webkit-transform: scale(1); }
+}
+@-moz-keyframes pop-in {
+0% { opacity: 0; -moz-transform: scale(0.5); }
+100% { opacity: 1; -moz-transform: scale(1); }
+}
+@keyframes pop-in {
+0% { opacity: 0;  transform: scale(0.5); }
+100% { opacity: 1;transform: scale(1); }
+}
+
+
 /* BLINK EFFECT (caret / Cursor)*/
 @keyframes "blink" {
   from, to {
@@ -93,6 +107,27 @@ $serif: "adriane", Georgia, serif;
     color:$lighter-grey;
   }
 }
+/* BACKGROUND COLOR FADE */
+@-webkit-keyframes backgroundgradientfade {
+    0%{background-position:4% 0%}
+    50%{background-position:97% 100%}
+    100%{background-position:4% 0%}
+}
+@-moz-keyframes backgroundgradientfade {
+    0%{background-position:4% 0%}
+    50%{background-position:97% 100%}
+    100%{background-position:4% 0%}
+}
+@-o-keyframes backgroundgradientfade {
+    0%{background-position:4% 0%}
+    50%{background-position:97% 100%}
+    100%{background-position:4% 0%}
+}
+@keyframes backgroundgradientfade { 
+    0%{background-position:4% 0%}
+    50%{background-position:97% 100%}
+    100%{background-position:4% 0%}
+}
 
 
 /* fadein */
@@ -119,11 +154,7 @@ $serif: "adriane", Georgia, serif;
 
 /* fixes to purecss */
 address{font-style: normal;}
-
 .pure-menu-link{
-	font-family: $sans-serif;
-	padding:1em;
-	margin:1em 0 2em;
 	text-transform: none;
 	border-radius:10px;
 	&:hover{
@@ -135,29 +166,13 @@ address{font-style: normal;}
 .pure-menu-selected a{
 	text-decoration: underline;
 	color: $black;
-
 }
 
-
-@-webkit-keyframes backgroundgradientfade {
-    0%{background-position:4% 0%}
-    50%{background-position:97% 100%}
-    100%{background-position:4% 0%}
-}
-@-moz-keyframes backgroundgradientfade {
-    0%{background-position:4% 0%}
-    50%{background-position:97% 100%}
-    100%{background-position:4% 0%}
-}
-@-o-keyframes backgroundgradientfade {
-    0%{background-position:4% 0%}
-    50%{background-position:97% 100%}
-    100%{background-position:4% 0%}
-}
-@keyframes backgroundgradientfade { 
-    0%{background-position:4% 0%}
-    50%{background-position:97% 100%}
-    100%{background-position:4% 0%}
+.pure-menu-children{
+	border:1px solid $lighter-grey;
+-webkit-box-shadow: 6px 7px 20px 1px rgba(0,0,0,0.08);
+-moz-box-shadow: 6px 7px 20px 1px rgba(0,0,0,0.08);
+box-shadow: 6px 7px 20px 1px rgba(0,0,0,0.08);
 }
 @import 'modal';
 
@@ -166,6 +181,9 @@ html,body{
 	background:white;
 	position:relative;
 // 	-webkit-font-smoothing:subpixel-antialiased;
+}
+body{
+	word-wrap:break-word !important;
 }
 html, button, input, select, textarea,
 .pure-g [class *= "pure-u"] {
@@ -179,25 +197,6 @@ html, button, input, select, textarea,
 	background:white;
 	padding:1em;
 }
-.content-wrapper {
-	/* triggers hardware acceleration */
-/*
-	-webkit-transform: translate3d(0,0,0);
-	-moz-transform: translate3d(0,0,0);
-	-ms-transform: translate3d(0,0,0);
-	-o-transform: translate3d(0,0,0);
-	transform: translate3d(0,0,0);
-	background: linear-gradient(317deg, #dffaff, #f5ffe1, #fee3e3, #cdecc4);
-	background-size: 800% 800%;
-	-webkit-animation: backgroundgradientfade 24s ease infinite;
-	-moz-animation: backgroundgradientfade 24s ease infinite;
-	-o-animation: backgroundgradientfade 24s ease infinite;
-	animation: backgroundgradientfade 24s ease infinite;
-	min-height: 400px;
-	min-height: 70%;
-	min-height: 70vh;
-*/
-}
 
 #user-avatar{
 	text-align: center;
@@ -206,11 +205,11 @@ html, button, input, select, textarea,
 		vertical-align: middle;
 		display:inline-block;
 		margin-right:1em;
-		width:50px;
+		width:40px;
 		height:auto;
 	}
 	.user-name{
-		display:inline-block;
+		display:block;
 		width:75px;
 		text-align: center;
 		font-weight: bold;
@@ -241,7 +240,6 @@ html, button, input, select, textarea,
 .header{
 	background:white;
 	padding:1em;
-	overflow:hidden;
 }
 .footer{
 	text-align:center;
@@ -292,15 +290,23 @@ html, button, input, select, textarea,
 	}
 }
 .hand{display:inline-block;margin:2em;}
-#global-menu li{
+
+.global-menu-wrapper{
+	text-align: right;
+	li{
+		text-align:left;
+	}
+}
+#user-avatar .pure-menu-link{
+	text-align:left;
+}
+#global-menu{
 	font-size:80%;
 }
 
 #another-quote-button,
 #suggest-quote{
 	text-transform: none;
-	display:inline-block;
-	margin:1em auto 2em;
 	background: white;
 // 	background: linear-gradient(317deg, #dffaff, #f5ffe1, #fee3e3, #cdecc4);
 	color:$black;
@@ -581,6 +587,7 @@ text-align:center;}
 	border-radius:3px;
 	padding:0px 3px;
 	width:20px;
+	text-decoration:none;
 	img{
 		vertical-align: middle;
 	}
@@ -590,20 +597,34 @@ text-align:center;}
 	&:active{
 		@extend .glow;
 	}
-}
-.favourite{
-	display:inline-block;
-	padding:3px 3px;
-	width:20px;
-	height:20px;
-	background:transparent url('../img/heart-sprite.svg') 0 4px no-repeat;
-	em{display:none;}
-	&.liked,
-	&:hover,
-	&:active{
-		background-position-x:-30px;
+	&.favourite{
+		background:transparent url('../img/heart-sprite.svg') 0 4px no-repeat;
+		em{display:none;}
+		color:$black;
+		padding:0;
+		width:40px;
+		
+		span.total_likes{
+			color:$black;
+			text-align:center;
+			padding-left:5px;
+		}
+		&:hover{
+			background-position-x:-100px;
+			background:transparent url('../img/heart-sprite.svg') -100px 4px no-repeat;			
+		}
+		&.loading {
+			background-position-x:-200px;
+			background:transparent url('../img/heart-sprite.svg') -200px 4px no-repeat;
+		}
+		&.liked {
+			background-position-x:-300px;
+			background:transparent url('../img/heart-sprite.svg') -300px 4px no-repeat;
+			color:white;
+		}
 	}
 }
+
 
 .single-signon-providers{
 	list-style: none;
@@ -713,8 +734,18 @@ margin-bottom:2em;
 /* FORM ELEMENTS */
 form{padding:2em;}
 
+@media screen and (min-width:35.5em){
 
+}
 @media (min-width: 48em) {
+	
+	#another-quote-button,
+#suggest-quote{
+	text-transform: none;
+	display:inline-block;
+	margin:1em auto 2em;
+}
+	
 	blockquote.large{
 		font-size:32px;
 		line-height: 1.4;
@@ -728,7 +759,7 @@ body.of-author{
 		transition: all 350ms cubic-bezier(.7, .5, .3, 1);
 
 		figcaption{
-		opacity:0.1;
+		opacity:0.3;
 		transition: all 350ms cubic-bezier(.7, .5, .3, 1);
 
 		}
@@ -771,18 +802,6 @@ body.of-author{
 }
 
 
-@-webkit-keyframes pop-in {
-0% { opacity: 0; -webkit-transform: scale(0.5); }
-100% { opacity: 1; -webkit-transform: scale(1); }
-}
-@-moz-keyframes pop-in {
-0% { opacity: 0; -moz-transform: scale(0.5); }
-100% { opacity: 1; -moz-transform: scale(1); }
-}
-@keyframes pop-in {
-0% { opacity: 0;  transform: scale(0.5); }
-100% { opacity: 1;transform: scale(1); }
-}
 
 /* STICKY HEADER */
 
@@ -834,25 +853,6 @@ box-shadow: 0px 1px 18px 0px rgba(92,92,92,0.3);
 
 }
 
-
-@media only screen and (-Webkit-min-device-pixel-ratio: 1.5), only screen and (-moz-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3/2),	only screen and (min-device-pixel-ratio: 1.5) {
-
-	/* NOMINEE */
-
-	#awwwards.nominee.black a{
-		background-image: url(../img/ribbons/awwwards_nominee_black@2x.png);
-	}
-	#awwwards.nominee.silver a{
-		background-image: url(../img/ribbons/awwwards_nominee_silver@2x.png);
-	}
-	#awwwards.nominee.white a{
-		background-image: url(../img/ribbons/awwwards_nominee_white@2x.png);
-	}
-	#awwwards.nominee.green a{
-		background-image: url(../img/ribbons/awwwards_nominee_green@2x.png);
-	}
-
-}
 @media print {
 	@import 'print';
 	.content-wrapper{background:white;}
@@ -866,7 +866,19 @@ box-shadow: 0px 1px 18px 0px rgba(92,92,92,0.3);
 	#global-menu {
 		display:none;
 	}
+	.latest-quotes-list,
+	.content{padding:0;}
+	#logo{line-height: 1;font-size:11px; small{display:none;}}
 	figure.quote{padding:0}
+	.quote{
+		margin:1em auto;
+		max-width:100%;
+	}
+	.photo{
+		-webkit-box-shadow: none;
+		-moz-box-shadow: none;
+		box-shadow: none;
+	}
 	h2.topic-title, #logo, address.author, .image-provided-by-google{
 		color:$light-grey;
 		font-weight: 100;
