--- a/ui/css/main.scss
+++ b/ui/css/main.scss
@@ -290,7 +290,7 @@ html, button, input, select, textarea,
 		content: "“";
 	}
 }
-.hand{display:inline-block;margin:2em;}
+.hand{display:inline-block;margin:2em;height:25px;width:auto;}
 
 .global-menu-wrapper{
 	text-align: right;
@@ -730,7 +730,15 @@ margin-bottom:2em;
 	}
 }
 
-
+.tip{
+	text-align: center;
+	background-color:#ffffe5;
+	padding:1rem;
+	text-align: center;
+	max-width:990px;
+	margin:0 auto 4rem;
+	border-radius: 10px
+}
 
 /* FORM ELEMENTS */
 form{padding:2em;}
