--- a/web/public/assets/css/_1.ipad-portrait.scss
+++ b/web/public/assets/css/_1.ipad-portrait.scss
@@ -55,3 +55,26 @@ blockquote.large {
 		text-align: left;
 	}
 }
+/* BADGE CTA */
+
+.badge-cta {
+	position: relative;
+	.badge {
+		display: block;
+		position: absolute;
+		top: -2px;
+		right: -2px;
+		line-height: 16px;
+		height: 16px;
+		padding: 0 5px;
+		font-size: 12px;
+		color: white;
+		border: 1px solid;
+		border-radius: 10px;
+		background: white;
+		background-color: $red;
+		border-color: white;
+		opacity: 0;
+		animation: pop-in 0.5s ease-in-out 3s forwards;
+	}
+}
